--- a/show/templates/show/password.html
+++ b/show/templates/show/password.html
@@ -1,10 +1,100 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "show/common/base.html" %}
+{% load staticfiles %}
+{% block title %}密码修改{% endblock %}
 
-</body>
-</html>
+{% block css %}
+    <link rel="stylesheet" type="text/css" href="{% static "css/libs/font-awesome.css" %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static "css/libs/dataTables.fixedHeader.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/libs/dataTables.tableTools.css" %}">
+{% endblock %}
+{% block content %}
+    <div id="main">
+
+
+				<ol class="breadcrumb">
+						<li><a href="#">首页</a></li>
+						<li class="active">修改密码</li>
+				</ol>
+				<!-- //breadcrumb-->
+
+				<div id="content">
+					<div class="row">
+						<div class="col-lg-12">
+
+                            <div class="row">
+                                <header class="main-box-header clearfix">
+											<h2>&nbsp;</h2>
+										</header>
+                                <div class="col-lg-12">
+                                    <div class="main-box">
+
+                                        <div class="main-box-body clearfix">
+                                            <form class="form-horizontal" id="passwordForm" role="form" method="POST" action="/accounts/password" parsley-validate parsley-bind>
+                                                {% csrf_token %}
+                                                <div class="form-group">
+                                                    <label for="inputEmail1" class="col-lg-2 control-label">原密码</label>
+                                                    <div class="col-lg-10">
+                                                        <input type="password" class="form-control" id="inputEmail1" placeholder="原密码"  parsley-trigger="keyup"
+                                                                parsley-rangelength="[8,20]" parsley-required="true" name="oriPassword"
+                                               parsley-error-message="密码长度不正确">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="inputPassword1" class="col-lg-2 control-label">新密码</label>
+                                                    <div class="col-lg-10">
+                                                        <input type="password" class="form-control" id="inputPassword1" placeholder="新密码" parsley-trigger="keyup"
+                                                parsley-rangelength="[8,20]" parsley-required="true" name="password"
+                                               parsley-error-message="密码长度不正确" >
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label for="inputPassword1" class="col-lg-2 control-label">再次输入密码</label>
+                                                    <div class="col-lg-10">
+                                                        <input type="password" class="form-control" id="inputPassword1" parsley-trigger="keyup"
+                                               parsley-equalto="#inputPassword1" placeholder="确认密码" name="password2"
+                                               parsley-error-message="两次输入密码不匹配" >
+                                                    </div>
+                                                </div>
+                                                <div class="form-group" style="text-align: center;">
+                                                    <div class="col-lg-offset-2 col-lg-10">
+                                                        <button type="submit" class="btn btn-success">提交</button>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+							
+						</div>
+					</div>
+    </div>
+					</div>
+{% endblock %}
+
+{% block js %}
+
+<script type="text/javascript" src="{% static "plugins/form/form.js" %}"></script>
+	<!-- theme scripts -->
+{#	<script src="{% static "js/scripts.js" %}"></script>#}
+{#	<script src="{% static "js/pace.min.js" %}"></script>#}
+	
+	<!-- this page specific inline scripts -->
+	<script>
+        $(function(){
+            $("#passwordForm").submit(function(e){
+
+                 if (typeof  $(this).attr("parsley-validate") != 'undefined') {
+                    var $valid = $(this).parsley('validate');
+                    if (!$valid) { e.preventDefault();
+                        return false;
+                    }
+                }
+                return true;
+            })
+        })
+
+	</script>
+	
+{% endblock %}
