--- a/show/templates/show/common/nav.html
+++ b/show/templates/show/common/nav.html
@@ -11,6 +11,9 @@
 					<li><a href="/input/"><i class="icon  fa fa-rocket"></i> 入库 </a></li>
 					<li><a href="/output/"><i class="icon  fa fa-th"></i> 出库 </a></li>
 					<li><a href="/query/"><i class="icon  fa fa-search"></i> 查询 </a></li>
+                    <li><a href="/commodity/"><i class="icon  fa fa-rocket"></i> 采购管理 </a></li>
+                    <li><a href="/storage/"><i class="icon  fa fa-rocket"></i> 库房管理 </a></li>
+                    <li><a href="/sale/"><i class="icon  fa fa-rocket"></i> 销售管理 </a></li>
 				</ul>
 			</li>
 			<li><span><i class="icon  fa fa-flag"></i> 生产流程管理 </span>
