--- a/show/templates/show/common/nav.html
+++ b/show/templates/show/common/nav.html
@@ -6,23 +6,31 @@
 		-->
 	<nav id="menu"  data-search="close">
 		<ul>
-			<li><span><i class="icon  fa fa-laptop"></i> 库存管理 </span>
+            <li><span><i class="icon  fa fa-laptop"></i> 库存管理 </span>
 				<ul>
-					<li><a href="/input/"><i class="icon  fa fa-rocket"></i> 入库 </a></li>
-					<li><a href="/output/"><i class="icon  fa fa-th"></i> 出库 </a></li>
-					<li><a href="/query/"><i class="icon  fa fa-search"></i> 查询 </a></li>
                     <li><a href="/commodity/"><i class="icon  fa fa-rocket"></i> 采购管理 </a></li>
                     <li><a href="/storage/"><i class="icon  fa fa-rocket"></i> 库房管理 </a></li>
                     <li><a href="/sale/"><i class="icon  fa fa-rocket"></i> 销售管理 </a></li>
 				</ul>
 			</li>
-			<li><span><i class="icon  fa fa-flag"></i> 生产流程管理 </span>
-				<ul>
-					<li><a href="/process/"><i class="icon  fa fa-rocket"></i> 生产流程 </a></li>
-					<li><a href="/recall/"><i class="icon  fa fa-star"></i> 产品回溯 </a></li>
-					<li><a href="/progress/"><i class="icon  fa fa-search"></i> 生产进度查询 </a></li>
-				</ul>
-			</li>
+
+{#			<li><span><i class="icon  fa fa-laptop"></i> 库存管理 </span>#}
+{#				<ul>#}
+{#					<li><a href="/input/"><i class="icon  fa fa-rocket"></i> 入库 </a></li>#}
+{#					<li><a href="/output/"><i class="icon  fa fa-th"></i> 出库 </a></li>#}
+{#					<li><a href="/query/"><i class="icon  fa fa-search"></i> 查询 </a></li>#}
+{#                    <li><a href="/commodity/"><i class="icon  fa fa-rocket"></i> 采购管理 </a></li>#}
+{#                    <li><a href="/storage/"><i class="icon  fa fa-rocket"></i> 库房管理 </a></li>#}
+{#                    <li><a href="/sale/"><i class="icon  fa fa-rocket"></i> 销售管理 </a></li>#}
+{#				</ul>#}
+{#			</li>#}
+{#			<li><span><i class="icon  fa fa-flag"></i> 生产流程管理 </span>#}
+{#				<ul>#}
+{#					<li><a href="/process/"><i class="icon  fa fa-rocket"></i> 生产流程 </a></li>#}
+{#					<li><a href="/recall/"><i class="icon  fa fa-star"></i> 产品回溯 </a></li>#}
+{#					<li><a href="/progress/"><i class="icon  fa fa-search"></i> 生产进度查询 </a></li>#}
+{#				</ul>#}
+{#			</li>#}
             <li><span><i class="icon  fa fa-fire"></i> 权限管理 </span>
 				<ul>
 					<li><a href="/auth_list/"><i class="icon  fa fa-rocket"></i> 权限列表 </a></li>
