--- a/show/templates/show/login.html
+++ b/show/templates/show/login.html
@@ -1,10 +1,172 @@
+{% load staticfiles %}
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<html lang="en">
+<head>
+<!-- Meta information -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+<!-- Title-->
+<title>登陆</title>
+<!-- Favicons -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static "assets/ico/apple-touch-icon-144-precomposed.png" %}">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static "assets/ico/apple-touch-icon-114-precomposed.png" %}">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static "assets/ico/apple-touch-icon-72-precomposed.png" %}">
+<link rel="apple-touch-icon-precomposed" href="{% static "assets/ico/apple-touch-icon-57-precomposed.png" %}">
+<link rel="shortcut icon" href="{% static "assets/ico/favicon.ico" %}">
+<!-- CSS Stylesheet-->
+<link type="text/css" rel="stylesheet" href="{% static "assets/css/bootstrap/bootstrap.min.css" %}" />
+<link type="text/css" rel="stylesheet" href="{% static "assets/css/bootstrap/bootstrap-themes.css" %}" />
+<link type="text/css" rel="stylesheet" href="{% static "assets/css/style.css" %}" />
 
+<!-- Styleswitch if  you don't chang theme , you can delete -->
+<link type="text/css" rel="alternate stylesheet" media="screen" title="style1" href="{% static "assets/css/styleTheme1.css" %}" />
+<link type="text/css" rel="alternate stylesheet" media="screen" title="style2" href="{% static "assets/css/styleTheme2.css" %}" />
+<link type="text/css" rel="alternate stylesheet" media="screen" title="style3" href="{% static "assets/css/styleTheme3.css" %}" />
+<link type="text/css" rel="alternate stylesheet" media="screen" title="style4" href="{% static "assets/css/styleTheme4.css" %}" />
+
+</head>
+<body class="full-lg">
+<div id="wrapper">
+
+<div id="loading-top">
+		<div id="canvas_loading"></div>
+		<span>Checking...</span>
+</div>
+
+<div id="main">
+		<div class="container">
+				<div class="row">
+						<div class="col-lg-12">
+
+								<div class="account-wall">
+										<section class="align-lg-center">
+										<div class="site-logo"></div>
+										<h1 class="login-title"><span>欢迎</span>来到 <small> 库存销售管理系统v0.1</small></h1>
+										</section>
+										<form id="form-signin" class="form-signin">
+												<section>
+														<div class="input-group">
+																<div class="input-group-addon"><i class="fa fa-user"></i></div>
+																<input  type="text" class="form-control" name="username" placeholder="用户名">
+														</div>
+														<div class="input-group">
+																<div class="input-group-addon"><i class="fa fa-key"></i></div>
+																<input type="password" class="form-control"  name="password" placeholder="密码">
+														</div>
+														<button class="btn btn-lg btn-theme-inverse btn-block" type="submit" id="sign-in">登陆</button>
+												</section>
+												<section class="clearfix">
+														<div class="iCheck pull-left"  data-color="red">
+														<input type="checkbox" checked>
+														<label>记住我</label>
+														</div>
+{#														<a href="#" class="pull-right help">Forget Password? </a>#}
+												</section>
+{#												<span class="or" data-text="Or"></span>#}
+{#												<button class="btn btn-lg  btn-inverse btn-block" type="button"> New account </button>#}
+										</form>
+										<a href="http://www.metastudio.com.cn" target="_blank" class="footer-link">&copy; 2016 麦塔工作室 &trade; </a>
+								</div>
+								<!-- //account-wall-->
+
+						</div>
+						<!-- //col-sm-6 col-md-4 col-md-offset-4-->
+				</div>
+				<!-- //row-->
+		</div>
+		<!-- //container-->
+
+</div>
+<!-- //main-->
+
+
+</div>
+<!-- //wrapper-->
+
+
+<!--
+////////////////////////////////////////////////////////////////////////
+//////////     JAVASCRIPT  LIBRARY     //////////
+/////////////////////////////////////////////////////////////////////
+-->
+
+<!-- Jquery Library -->
+<script type="text/javascript" src="{% static "assets/js/jquery.min.js" %}"></script>
+<script type="text/javascript" src="{% static "assets/js/jquery.ui.min.js" %}"></script>
+<script type="text/javascript" src="{% static "assets/plugins/bootstrap/bootstrap.min.js" %}"></script>
+<!-- Modernizr Library For HTML5 And CSS3 -->
+<script type="text/javascript" src="{% static "assets/js/modernizr/modernizr.js" %}"></script>
+<script type="text/javascript" src="{% static "assets/plugins/mmenu/jquery.mmenu.js" %}"></script>
+<script type="text/javascript" src="{% static "assets/js/styleswitch.js" %}"></script>
+<!-- Library 10+ Form plugins-->
+<script type="text/javascript" src="{% static "assets/plugins/form/form.js" %}"></script>
+<!-- Datetime plugins -->
+<script type="text/javascript" src="{% static "assets/plugins/datetime/datetime.js" %}"></script>
+<!-- Library Chart-->
+<script type="text/javascript" src="{% static "assets/plugins/chart/chart.js" %}"></script>
+<!-- Library  5+ plugins for bootstrap -->
+<script type="text/javascript" src="{% static "assets/plugins/pluginsForBS/pluginsForBS.js" %}"></script>
+<!-- Library 10+ miscellaneous plugins -->
+<script type="text/javascript" src="{% static "assets/plugins/miscellaneous/miscellaneous.js" %}"></script>
+<!-- Library Themes Customize-->
+<script type="text/javascript" src="{% static "assets/js/caplet.custom.js" %}"></script>
+<script type="text/javascript">
+$(function() {
+		   //Login animation to center
+			function toCenter(){
+					var mainH=$("#main").outerHeight();
+					var accountH=$(".account-wall").outerHeight();
+					var marginT=(mainH-accountH)/2;
+						   if(marginT>30){
+							   $(".account-wall").css("margin-top",marginT-15);
+							}else{
+								$(".account-wall").css("margin-top",30);
+							}
+				}
+				toCenter();
+				var toResize;
+				$(window).resize(function(e) {
+					clearTimeout(toResize);
+					toResize = setTimeout(toCenter(), 500);
+				});
+
+			//Canvas Loading
+			  var throbber = new Throbber({  size: 32, padding: 17,  strokewidth: 2.8,  lines: 12, rotationspeed: 0, fps: 15 });
+			  throbber.appendTo(document.getElementById('canvas_loading'));
+			  throbber.start();
+
+			//Set note alert
+{#			setTimeout(function () {#}
+{#				$.notific8('Hi Guest , you can use Username : <strong>demo</strong> and Password: <strong>demo</strong> to  access account.',{ sticky:true, horizontalEdge:"top", theme:"inverse" ,heading:"LOGIN DEMO"})#}
+{#				}, 1000);#}
+
+
+			$("#form-signin").submit(function(event){
+					event.preventDefault();
+					var main=$("#main");
+					//scroll to top
+					main.animate({
+						scrollTop: 0
+					}, 500);
+					main.addClass("slideDown");
+
+					// send username and password to php check login
+					$.ajax({
+						url: "/login", data: $(this).serialize(), type: "POST", dataType: 'json',
+						success: function (e) {
+								setTimeout(function () { main.removeClass("slideDown") }, !e.status ? 500:3000);
+								 if (!e.status) {
+									 $.notific8('请检查用户名密码 !! ',{ life:5000,horizontalEdge:"bottom", theme:"danger" ,heading:" ERROR :); "});
+									return false;
+								 }
+								 setTimeout(function () { $("#loading-top span").text("登陆成功...") }, 500);
+								 setTimeout(function () { $("#loading-top span").text("页面跳转中...")  }, 1500);
+								 setTimeout( "window.location.href='/index'", 3100 );
+						}
+					});
+
+			});
+	});
+</script>
 </body>
 </html>
