--- a/show/templates/show/storage.html
+++ b/show/templates/show/storage.html
@@ -24,7 +24,7 @@
 
                     <h1>库存管理</h1>
 
-                    <button class="pull-right btn btn-success" id="addPrivilegeBtn" type="button"><i
+                    <button class="pull-right btn btn-success" id="addStorageBtn" type="button"><i
                             class="glyphicon glyphicon-plus"></i><span>新增库存</span></button>
                 </div>
             </div>
@@ -55,6 +55,7 @@
                                             <th>价格</th>
                                             <th>单位</th>
                                             <th>备注</th>
+                                            <th>操作</th>
                                         </tr>
                                         </thead>
                                         <tbody align="center">
@@ -76,6 +77,7 @@
                                             <td class="left">{{ storage.price }}</td>
                                             <td class="left">{{ storage.unit }}</td>
                                             <td class="left">{{ storage.memo }}</td>
+                                            <td class="left"><a href="javascript:void(0);" id="{{ storage.id }}" class="ajaxEdit">编辑</a></td>
                                             </tr>
                                         {% endfor %}
                                         </tbody>
@@ -111,7 +113,7 @@
 
     function ajaxEdit(id){
         $.ajax({
-            url:'/auth_ajaxAddMenu?id='+id,
+            url:'/ajax_add_storage?id='+id,
             success:function(e){
                 $("body").append(e);
             }
@@ -120,7 +122,7 @@
 
     function ajaxDel(id){
         if(confirm('确定删除该记录?')) {
-            window.location.href='/auth_ajaxDelMenu?id=' + id;
+            window.location.href='/ajax_add_storage?id=' + id;
 {#            $.ajax({#}
 {#                url: '/auth_ajaxDelMenu?id=' + id,#}
 {#                success: function (e) {#}
@@ -143,9 +145,9 @@
 
 
 
-        $("#addPrivilegeBtn").click(function(){
+        $("#addStorageBtn").click(function(){
             $.ajax({
-                url:'/auth_ajaxAddMenu',
+                url:'/ajax_add_storage',
                 success:function(e){
                     $("body").append(e);
                 }
