--- a/show/templates/show/password.html
+++ b/show/templates/show/password.html
@@ -29,13 +29,13 @@
                                     <div class="main-box">
 
                                         <div class="main-box-body clearfix">
-                                            <form class="form-horizontal" id="passwordForm" role="form" method="POST" action="/accounts/password" parsley-validate parsley-bind>
+                                            <form class="form-horizontal" id="passwordForm" role="form" method="POST" action="/password/" parsley-validate parsley-bind>
                                                 {% csrf_token %}
                                                 <div class="form-group">
                                                     <label for="inputEmail1" class="col-lg-2 control-label">原密码</label>
                                                     <div class="col-lg-10">
                                                         <input type="password" class="form-control" id="inputEmail1" placeholder="原密码"  parsley-trigger="keyup"
-                                                                parsley-rangelength="[8,20]" parsley-required="true" name="oriPassword"
+                                                                parsley-rangelength="[6,20]" parsley-required="true" name="old_password"
                                                parsley-error-message="密码长度不正确">
                                                     </div>
                                                 </div>
@@ -43,7 +43,7 @@
                                                     <label for="inputPassword1" class="col-lg-2 control-label">新密码</label>
                                                     <div class="col-lg-10">
                                                         <input type="password" class="form-control" id="inputPassword1" placeholder="新密码" parsley-trigger="keyup"
-                                                parsley-rangelength="[8,20]" parsley-required="true" name="password"
+                                                parsley-rangelength="[6,20]" parsley-required="true" name="new_password"
                                                parsley-error-message="密码长度不正确" >
                                                     </div>
                                                 </div>
