--- a/show/templates/show/common/nav.html
+++ b/show/templates/show/common/nav.html
@@ -11,6 +11,7 @@
                     <li><a href="/commodity/"><i class="icon  fa fa-rocket"></i> 采购管理 </a></li>
                     <li><a href="/storage/"><i class="icon  fa fa-rocket"></i> 库房管理 </a></li>
                     <li><a href="/sale/"><i class="icon  fa fa-rocket"></i> 销售管理 </a></li>
+                    <li><a href="/sale_statistics/"><i class="icon  fa fa-rocket"></i> 销售统计 </a></li>
 				</ul>
 			</li>
 
